# string_py

./: README.md  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
examples/: printer.py  string_formatting.py  string_information.py  string_manipulation.py
examples/project_examples/: password_checker.py
py_string/: __init__.py
string_py/: __init__.py  string_py.py
